more spacing fixes

--- a/src/templates/Blog.css
+++ b/src/templates/Blog.css
@@ -25,8 +25,8 @@
   display: flex;
   background: #f3f3f7;
   margin-left: -1.5rem;
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
   width: calc(100% + 3rem);
   align-items: center;
   margin-bottom: 1.75rem;
@@ -256,7 +256,7 @@ pre {
 
 @media (min-width: 768px) {
   .Blog_container .gatsby-highlight {
-    max-width: 700px;
+    max-width: 740px;
     margin-left: auto;
     margin-right: auto;
   }
